# balyrond

./: .gitignore  .gitmodules  LICENSE  README.md  build-mac.sh  build-windows.bat  build_win32.bat
firmware/: adafruit-circuitpython-seeeduino_xiao-en_US-7.3.3.uf2  boot.py  main.py
firmware/0_10v_rp2040/: CMakeLists.txt  README.md  build-nix.sh  build-windows.bat  main.c  quadrature_encoder.pio
firmware/spc_2040/: CMakeLists.txt  README.md  build-nix.sh  main.c
nist/: A_CL2IC.m  AppCir.m  H_CL2CC.m  H_CL2IC.m  README.md  baly_output.txt  baly_test.cpp  balyrond_output.txt  driver.m  nist_reference_pairs_instructions.md  octave_output.txt  viz_nist.py  viz_test.py  viz_test21.py
nist/Circle2d/: cir2d1.ds  cir2d1.fit  cir2d10.ds  cir2d10.fit  cir2d11.ds  cir2d11.fit  cir2d12.ds  cir2d12.fit  cir2d13.ds  cir2d13.fit  cir2d14.ds  cir2d14.fit  cir2d15.ds  cir2d15.fit  cir2d16.ds  cir2d16.fit  cir2d17.ds  cir2d17.fit  cir2d18.ds  cir2d18.fit  cir2d19.ds  cir2d19.fit  cir2d2.ds  cir2d2.fit  cir2d20.ds  cir2d20.fit  cir2d21.ds  cir2d21.fit  cir2d22.ds  cir2d22.fit  cir2d23.ds  cir2d23.fit  cir2d24.ds  cir2d24.fit  cir2d25.ds  cir2d25.fit  cir2d26.ds  cir2d26.fit  cir2d27.ds  cir2d27.fit  (+20 more)
proto/: Makefile  README.md  hull.cpp  matplotlibcpp.h  mcc_test.cpp  mic.py  mic2_test.cpp  plot_hull.py  sim_anneal.cpp
schem/: wiring_diagram.dia
src/: pj_qwt_fix.patch
src/balyrond-pj-plugins/: CMakeLists.txt
src/balyrond-pj-plugins/DataStreamBalyrond/: datastream_balyrond.cpp  datastream_balyrond.h  datastream_balyrond_dialog.cpp  datastream_balyrond_dialog.h  datastream_balyrond_dialog.ui
src/balyrond-pj-plugins/ToolboxRoundness/: CMakeLists.txt  geom.cpp  geom.h  jc_voronoi.h  lscf.cpp  lscf.h  mcc.cpp  mcc.h  mic.cpp  mic.h  mic2.cpp  mic2.h  toolbox_roundness.cpp  toolbox_roundness.h  toolbox_roundness.ui
test/: 4_points.csv  balyrond_sample_data.csv  epsilon_sample_data.csv  tri_lobe_sample_data.csv
